[project]
name = "tongyi-deepresearch"
version = "1.0.0"
description = "An agentic large language model, designed for long-horizon, deep information-seeking tasks"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Tongyi DeepResearch Team", email = "yongjiang.jy@alibaba-inc.com"}
]

dependencies = [
    # Core ML and AI
    "transformers",
    "tiktoken",
    "numpy",
    "pandas",
    "vllm",

    # Web and HTTP
    "aiohttp",
    "requests",

    # API clients
    "openai>=1.99.5",
    "litellm",
    "dashscope",
    "qwen-agent",

    # Alibaba Cloud services
    "alibabacloud-credentials",
    "alibabacloud-docmind-api20220711",
    "alibabacloud-tea-openapi",
    "alibabacloud-tea-util",

    # Web scraping and parsing
    "beautifulsoup4",
    "crawl4ai",
    "datasets",

    # Data processing
    "json5",
    "markdown-it-py",
    "pydantic",

    # Utilities
    "tqdm",
    "tabulate",
    "tenacity",

    # Sandbox and tools
    "sandbox-fusion",

    # UI (optional - can be removed if not using web interface)
    "streamlit",

    # AI frameworks (optional)
    "langchain",

    # Image processing
    "pillow",
]

[project.urls]
Homepage = "https://github.com/Alibaba-NLP/DeepResearch"
Repository = "https://github.com/Alibaba-NLP/DeepResearch"
Documentation = "https://tongyi-agent.github.io/blog/introducing-tongyi-deep-research/"
"Bug Tracker" = "https://github.com/Alibaba-NLP/DeepResearch/issues"
"HuggingFace Model" = "https://huggingface.co/Alibaba-NLP/Tongyi-DeepResearch-30B-A3B"
"ModelScope" = "https://modelscope.cn/models/iic/Tongyi-DeepResearch-30B-A3B"

[tool.uv]
dev-dependencies = []
